# rust-training

./: .gitignore  CONTRIBUTING.md  Cargo.toml  Makefile  README.md  clippy.toml  rust-toolchain.toml  rustfmt.toml
.github/workflows/: ci.yml  deploy.yml
deploy/: Dockerfile  README.md  cloudrun.yaml  nginx.conf.template  setup.sh
docs/superpowers/plans/: 2026-06-07-lesson-20-ffi.md  (+21 more)
lessons/01-hello-rust/: README.md
lessons/02-variables/: README.md
lessons/03-control-flow/: README.md
lessons/04-compound-types/: README.md
lessons/05-pattern-matching/: README.md
lessons/06-structs/: README.md
lessons/07-ownership/: README.md
lessons/08-references/: README.md
lessons/09-lifetimes/: README.md
lessons/10-smart-pointers/: README.md
lessons/11-iterators-collections/: README.md
lessons/12-traits-generics/: README.md
lessons/13-trait-objects/: README.md
lessons/14-error-handling/: README.md
lessons/15-modules/: README.md
lessons/16-threads/: README.md
lessons/17-shared-state/: README.md
lessons/18-async-tokio/: README.md
lessons/19-unsafe-memory/: README.md
lessons/20-ffi/: README.md
lessons/21-io/: README.md
lessons/22-cli/: README.md
shared/reveal/: README.md
templates/: README.md.tmpl
templates/exercises/: Cargo.toml.tmpl
templates/slides/: index.html.tmpl  slides.md.tmpl
templates/solutions/: Cargo.toml.tmpl
tools/build-index/: Cargo.toml
tools/compile-fails/: Cargo.toml
tools/compile-fails/src/: lib.rs  main.rs
tools/compile-fails/tests/: runner.rs
tools/new-lesson/: Cargo.toml
tools/slides-dev/: Cargo.toml
(+238 files in other folders)
