[package]
name = "compile-fails"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true

[lints]
workspace = true

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true }
walkdir = { workspace = true }
tempfile = { workspace = true }
